--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -7,6 +7,7 @@
 
 .container {
   display: flex;
+  flex: 1;
 }
 
 .content {
@@ -14,4 +15,9 @@
   flex-direction: column;
   width: 70%;
   margin-right: 24px;
+}
+
+.chart-wrapper {
+  display: flex;
+  flex: 1;
 }
