--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
+  flex-direction: column;
   flex: 1;
-  background-color: var(--light);
   border-radius: 5px;
 }
 
@@ -10,8 +10,9 @@
   width: 100%;
   border-radius: 5px;
   transition: all 0.2s ease;
-  -webkit-box-shadow: 0px 3px 8.3px 0.7px rgba(163, 93, 255, 0.35);
-  box-shadow: var(--primary-box-shadow);
+  background-color: var(--light);
+  // -webkit-box-shadow: 0px 3px 8.3px 0.7px rgba(163, 93, 255, 0.35);
+  // box-shadow: var(--primary-box-shadow);
 
   h3 {
     margin-bottom: 12px;
@@ -24,15 +25,39 @@
   padding: 4px 0;
   font-size: 1.6rem;
 
-  span {
-    font-weight: 600;
-  }
-
   p {
     margin-left: 8px;
   }
 
   &:hover {
     background-color: #f2edf3;
+  }
+}
+
+.device-controls {
+  display: flex;
+  margin-top: 24px;
+  border-radius: 5px;
+  background-color: var(--light);
+  padding: 24px 32px;
+  flex: 1;
+
+  .control {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    border: 1px solid var(--gray-300);
+    border-radius: 5px;
+  }
+
+  .control-icon svg {
+    display: flex;
+    width: 180px;
+    height: auto;
+    margin-bottom: 8px;
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
   }
 }
