--- a/src/components/SwitchButton/SwitchButton.module.scss
+++ b/src/components/SwitchButton/SwitchButton.module.scss
@@ -4,6 +4,11 @@
   width: 74px;
   height: var(--height);
   border-radius: 5px;
+
+  &,
+  * {
+    transition: 0.8s ease all;
+  }
 }
 
 .switch-btn {
@@ -31,7 +36,7 @@
     left: 0;
     width: 100%;
     background-color: #fcebeb;
-    transition: 0.3s ease all;
+    transition: 0.3s ease all !important;
     z-index: 1;
     border-radius: 5px;
     border: 1px solid #f44336;
@@ -61,7 +66,7 @@
     padding: 9px 4px;
     background-color: #f44336;
     border-radius: 2px;
-    transition: 0.3s ease all, left 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
+    transition: 0.3s ease all, left 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) !important;
   }
 }
 
@@ -83,5 +88,16 @@ input[type='checkbox'] {
   &:checked ~ .layer {
     background-color: #ebf7fc;
     border: 1px solid #03a9f4;
+  }
+}
+
+// Dark mode
+.wrapper.dark {
+  .layer {
+    background-color: var(--dark);
+  }
+
+  input:checked ~ .layer {
+    background-color: var(--dark);
   }
 }
