--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,8 +1,14 @@
 .wrapper {
-  padding: 36px;
+  padding: 36px 72px;
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: var(--bg-color);
+  transition: all 0.8s ease;
+
+  &.dark {
+    background-color: var(--bg-color-dark);
+  }
 }
 
 .container {
