--- a/src/layouts/components/Chart/Chart.module.scss
+++ b/src/layouts/components/Chart/Chart.module.scss
@@ -1,7 +1,17 @@
 .wrapper {
+  flex: 1;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 100%;
+  margin-top: 24px;
 }
 
 .chart {
   width: 100%;
+}
+
+.wrapper.dark {
+  background-color: var(--bg-box-dark);
 }
