--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -47,7 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--dark);
+    color: var(--gray);
     font-size: 1.8rem;
     padding: 8px 12px;
     border-radius: 5px;
@@ -73,6 +73,7 @@
 
 .theme-wrapper {
   margin-left: 24px;
+  --size: 36px;
 
   .theme-label {
     display: flex;
@@ -80,8 +81,8 @@
     align-items: center;
     position: relative;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: var(--size);
+    height: var(--size);
     cursor: pointer;
   }
 
@@ -106,8 +107,8 @@
   .toggle {
     position: absolute;
     display: block;
-    width: 40px;
-    height: 40px;
+    width: var(--size);
+    height: var(--size);
     border-radius: 50%;
     background-color: var(--gray-100);
     z-index: 1;
@@ -120,15 +121,15 @@
 .theme-icon {
   svg {
     display: flex;
-    height: 20px;
-    width: 20px;
+    height: 18px;
+    width: 18px;
     filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
     transition: all 0.8s ease;
   }
 
   &.sun-icon svg {
-    height: 24px;
-    width: 24px;
+    height: 22px;
+    width: 22px;
     transform: rotate(360deg) scale(0);
     fill: var(--gray-200);
   }
@@ -172,6 +173,8 @@ input.theme-input:checked {
 
   .nav {
     .nav-link {
+      color: var(--gray-lighter) !important;
+
       &:hover {
         color: var(--primary) !important;
         background-color: rgba(var(--bg-color-dark-rgb), 0.5) !important;
