--- a/src/layouts/components/WidgetBar/WidgetBar.module.scss
+++ b/src/layouts/components/WidgetBar/WidgetBar.module.scss
@@ -16,7 +16,7 @@
   -webkit-box-shadow: 0px 3px 8.3px 0.7px rgba(163, 93, 255, 0.35);
   box-shadow: var(--primary-box-shadow);
 
-  .card-cirlce {
+  .card-circle {
     position: absolute;
     top: 0;
     bottom: 0;
