--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -21,6 +21,7 @@
   --gray-dark: #0f1531;
   --black: #000000;
   --gray-100: #f8f9fa;
+  --gray-3000: rgb(110, 17, 217);
   --gray-200: #e9ecef;
   --gray-300: #dee2e6;
   --gray-400: #ced4da;
@@ -29,7 +30,7 @@
   --gray-700: #495057;
   --gray-800: #343a40;
   --gray-900: #212529;
-  --primary: #b66dff;
+  --primary: #b66eff;
   --secondary: #c3bdbd;
   --success: #1bcfb4;
   --info: #198ae3;
@@ -37,7 +38,7 @@
   --danger: #fe7c96;
   --light: #f8f9fa;
   --dark: #3e4b5b;
-  --primary-rgb: 13, 110, 253;
+  --primary-rgb: 182, 109, 255;
   --secondary-rgb: 108, 117, 125;
   --success-rgb: 25, 135, 84;
   --info-rgb: 13, 202, 240;
