--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -53,6 +53,7 @@
     border-radius: 5px;
     margin-bottom: 0;
     transition: all 0.2s ease;
+    border: 1px solid transparent;
     cursor: pointer;
 
     &:not(:first-of-type) {
@@ -67,6 +68,7 @@
     &.active {
       color: var(--purple);
       background-color: var(--bg-color);
+      border: 1px solid var(--primary);
     }
   }
 }
@@ -183,6 +185,7 @@ input.theme-input:checked {
       &.active {
         color: var(--primary) !important;
         background-color: var(--bg-color-dark) !important;
+        border: 1px solid rgba(var(--primary-rgb), 0.5) !important;
       }
     }
   }
