--- a/src/layouts/components/Header/DropdownMenu.scss
+++ b/src/layouts/components/Header/DropdownMenu.scss
@@ -41,11 +41,11 @@
   }
 
   .ant-dropdown-menu-title-content {
-    color: var(--gray-light) !important;
+    color: var(--gray-lighter) !important;
   }
 
   .ant-dropdown-menu-item-icon {
-    color: var(--gray-light) !important;
+    color: var(--gray-lighter) !important;
   }
 
   .ant-dropdown-menu-item-active {
