--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   // background-color: orange;
   height: fit-content;
-  max-height: 10%;
+  // max-height: 10%;
   padding: 12px 18px;
   align-items: center;
   border-radius: 5px;
