--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -290,7 +290,8 @@
 
 .project__item {
   border-radius: 24px;
-  width: 400px;
+  min-width: 400px;
+  max-width: 400px;
   height: 424px;
   /* margin: 4%; */
 }
