--- a/src/components/CustomTable/CustomTable.scss
+++ b/src/components/CustomTable/CustomTable.scss
@@ -23,9 +23,33 @@
   }
 
   .ctTable-header {
-    color: var(--light);
-    font-size: 2.4rem;
-    font-weight: 600;
+    width: 100%;
+    padding: 0 8px;
+
+    .ant-btn-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .ctTable-search-icon {
+      font-size: 1.8rem;
+      color: var(--info);
+    }
+
+    .ctTable-header-title {
+      font-size: 1.8rem;
+      font-weight: 600;
+      color: var(--white);
+      margin-right: 12px;
+      min-width: fit-content;
+    }
+
+    .csTable-filter-title {
+      color: var(--white);
+      font-size: 1.6rem;
+      font-weight: 400;
+    }
   }
 
   .ctTale-footer {
