--- a/Front-end/src/layouts/components/WidgetBar/WidgetBar.module.scss
+++ b/Front-end/src/layouts/components/WidgetBar/WidgetBar.module.scss
@@ -89,7 +89,7 @@
 
   &.medium {
     * {
-      color: var(--light) !important;
+      color: var(--gray-100) !important;
     }
 
     background: -webkit-gradient(linear, left top, right top, from(#f6e384), to(#ffd500)) !important;
