Build Dynamic Chart and Refactor some UI code.

--- a/Front-end/src/layouts/components/Chart/Chart.module.scss
+++ b/Front-end/src/layouts/components/Chart/Chart.module.scss
@@ -6,11 +6,19 @@
   justify-content: center;
   max-height: 100%;
   margin-top: 24px;
+  position: relative;
+}
+
+.slide-data-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .chart {
   width: 100%;
   max-height: 95%;
+  min-height: 500px;
 }
 
 .wrapper.dark {
