--- a/Front-end/src/pages/Dashboard/Dashboard.module.scss
+++ b/Front-end/src/pages/Dashboard/Dashboard.module.scss
@@ -10,3 +10,13 @@
     margin-right: 24px;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .wrapper {
+    flex-direction: column !important;
+  }
+
+  .content {
+    width: 100% !important;
+  }
+}
