--- a/Front-end/src/components/CustomTable/CustomTable.scss
+++ b/Front-end/src/components/CustomTable/CustomTable.scss
@@ -189,3 +189,13 @@
     color: var(--gray-600) !important;
   }
 }
+
+.ant-float-btn-icon {
+  width: fit-content !important;
+
+  .ctTable-float-delete-btn {
+    display: flex;
+    fill: red;
+    font-size: 2.4rem;
+  }
+}
