Build mqttServices, UI and Refactor some logic, ...

--- a/Front-end/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Front-end/src/components/GlobalStyles/GlobalStyles.scss
@@ -64,7 +64,7 @@
   // Dark theme
   --bg-color-dark-rgb: 21, 20, 25;
   --bg-color-dark: #151419;
-  --bg-primary-gradient-dark: linear-gradient(to right, #da8cff, #9a55ff) !important;
+  --bg-primary-gradient-dark: linear-gradient(to right, #d994f9, #b07dfd) !important;
   --bg-box-dark: #232227;
 
   --black-primary: #161513;
