--- a/Front-end/src/layouts/components/WidgetBar/WidgetBar.module.scss
+++ b/Front-end/src/layouts/components/WidgetBar/WidgetBar.module.scss
@@ -69,6 +69,8 @@
 }
 
 .card.humidity {
+  // animation: blink 500ms infinite;
+
   &.normal {
     * {
       color: var(--light) !important;
@@ -186,5 +188,18 @@
 @media screen and (max-width: 1023px) {
   .wrapper {
     grid-template-columns: repeat(auto-fit, minmax(48%, 1fr)) !important;
+  }
+}
+
+@keyframes blink {
+  from,
+  to {
+    opacity: 1;
+    box-shadow: 0px 0px 40px 12px var(--danger);
+    filter: contrast(100%) saturate(3);
+  }
+  50% {
+    opacity: 0.5;
+    filter: contrast(150%) hue-rotate(45deg);
   }
 }
