--- a/Front-end/src/layouts/components/WidgetBar/WidgetBar.module.scss
+++ b/Front-end/src/layouts/components/WidgetBar/WidgetBar.module.scss
@@ -16,6 +16,10 @@
   -webkit-box-shadow: 0px 3px 8.3px 0.7px rgba(163, 93, 255, 0.35);
   box-shadow: var(--primary-box-shadow);
 
+  &.warning {
+    animation: blink 500ms infinite;
+  }
+
   .card-circle {
     position: absolute;
     top: 0;
@@ -69,8 +73,6 @@
 }
 
 .card.humidity {
-  // animation: blink 500ms infinite;
-
   &.normal {
     * {
       color: var(--light) !important;
